- Trying to buy gear plugin in career mode for an armor, armor mod, or gear attached in some way to an armor or armor mod without enough money now no longer leaves a "ghost" gear after the message saying that the character cannot afford the gear has been shown.
- Vehicle mods can now properly be sold in career mode.

Data Changes:
- Removed legacy nodes for Street Scum Priority values that caused incorrect nuyen amounts.
- The custom rulesets for Toxic traditions having no requirements and for Painade being available per the German version of Cutting Aces now load and work properly.
- The custom ruleset for having the special helmets assigned to specific armors be armor mods no longer still has an armor entry for the Urban Explorer Jumpsuit's helmet.
- Adding the Sensei quality to a character no longer causes the program to crash.
- The Elementalist qualities now properly restrict the character to a specific spell category instead of limiting the character to spells with the Elemental descriptor. Because not all traditions have a spell category assigned to all four elemental spirit types, because certain traditions like Draconic don't even have any spirit types assigned to spell categories, and because custom traditions and the Paradigm Shift metamagic exist, users will need to manually select the spell category to which their character is to be restricted instead of it being determined automatically.
- The special modifications for Improved AP, Improved Reach, and Improved Recoil Comp are now properly marked as such and are therefore now taken into account when trying to add more special modifications.
- The SASS version of Inspired now properly requires an Artisan specialization to be chosen that will be added with a +3 bonus instead of applying a +3 bonus to all Artisan specializations.
- The Run Faster version of Inspired no longer incorrectly makes all Artisan specializations give a +3 bonus instead of a +2 bonus.